[gd_scene load_steps=20 format=3 uid="uid://bw03pdn502v5d"]

[ext_resource type="PackedScene" uid="uid://bsn7iet4dsb6t" path="res://Scenes/Pacifica/pacifica.tscn" id="1_37m60"]
[ext_resource type="PackedScene" uid="uid://xgbq3wlvdjvf" path="res://Scenes/Battle/Tiles/test.tscn" id="1_eawws"]
[ext_resource type="Script" path="res://Scenes/Battle/Variables/DataPaths.gd" id="1_ngsyp"]
[ext_resource type="Script" path="res://Scenes/Battle/Tool/RosaArea.gd" id="2_c3uor"]
[ext_resource type="PackedScene" uid="uid://bsrmaqbdmtp4x" path="res://Scenes/Battle/Tool/onagre.tscn" id="2_t7trm"]
[ext_resource type="PackedScene" uid="uid://jyujfx28qxd6" path="res://Scenes/Pacifica/rosa.tscn" id="3_a5d2q"]
[ext_resource type="PackedScene" uid="uid://p6va4y4w0y7a" path="res://Scenes/Battle/GUI/gui.tscn" id="3_tbd3a"]
[ext_resource type="Script" path="res://Scenes/Battle/Managers/Enemies.gd" id="4_0uohg"]
[ext_resource type="PackedScene" uid="uid://j0oswagsulsg" path="res://Scenes/Battle/Items/chest.tscn" id="4_nt1i0"]
[ext_resource type="Script" path="res://Scenes/Battle/Managers/Bullets.gd" id="4_p8ntf"]
[ext_resource type="PackedScene" uid="uid://d0yfgc8y2jijm" path="res://Scenes/Battle/Enemies/soldier.tscn" id="5_1xlqc"]
[ext_resource type="Script" path="res://Scenes/Battle/Managers/TimerHP.gd" id="9_k88hd"]
[ext_resource type="PackedScene" uid="uid://dtyrvdjarhxjr" path="res://Scenes/Battle/Tool/area_rosa.tscn" id="11_2qusm"]
[ext_resource type="Script" path="res://Scenes/Battle/Items/Items.gd" id="11_05w3k"]
[ext_resource type="PackedScene" uid="uid://b78wiga38duti" path="res://Scenes/Battle/Items/coin.tscn" id="11_evg3r"]
[ext_resource type="Script" path="res://Scenes/Battle/Tool/SuperStocks.gd" id="15_kwbel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gd8io"]
size = Vector2(1230, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkk57"]
size = Vector2(1235, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45w1i"]
size = Vector2(57, 724)

[node name="Battle" type="Node2D"]
y_sort_enabled = true

[node name="TileMap" parent="." instance=ExtResource("1_eawws")]

[node name="DataPaths" type="Node2D" parent="." node_paths=PackedStringArray("MyGUI", "Onager", "Rosa")]
script = ExtResource("1_ngsyp")
MyGUI = NodePath("../GUI")
Onager = NodePath("../Onagre")
Rosa = NodePath("../Pacifica/Rosa")

[node name="RosaArea" type="Node2D" parent="." node_paths=PackedStringArray("DataPath")]
script = ExtResource("2_c3uor")
RosaArea = ExtResource("11_2qusm")
DataPath = NodePath("../DataPaths")
GoldChest = ExtResource("4_nt1i0")

[node name="TopLeft" type="Marker2D" parent="RosaArea"]
position = Vector2(108, 163)

[node name="BottomRight" type="Marker2D" parent="RosaArea"]
position = Vector2(1053, 506)

[node name="Timer" type="Timer" parent="RosaArea"]
one_shot = true

[node name="Pacifica" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Pacifica" parent="Pacifica" node_paths=PackedStringArray("DataPaths") instance=ExtResource("1_37m60")]
unique_name_in_owner = true
position = Vector2(574, 372)
DataPaths = NodePath("../../DataPaths")

[node name="Rosa" parent="Pacifica" node_paths=PackedStringArray("DataPaths") instance=ExtResource("3_a5d2q")]
position = Vector2(656, 474)
DataPaths = NodePath("../../DataPaths")

[node name="Onagre" parent="." node_paths=PackedStringArray("DataPaths", "BulletManager") instance=ExtResource("2_t7trm")]
position = Vector2(576, 568)
DataPaths = NodePath("../DataPaths")
BulletManager = NodePath("../Bullets")
strenght = 500.0
strenghtlevels = 500
hadoukenstrenght = 1000.0

[node name="Bullets" type="Node2D" parent="."]
script = ExtResource("4_p8ntf")

[node name="Jump" type="Marker2D" parent="Bullets"]
position = Vector2(587, 57)

[node name="Trees" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="." node_paths=PackedStringArray("DataPaths")]
unique_name_in_owner = true
y_sort_enabled = true
script = ExtResource("4_0uohg")
DataPaths = NodePath("../DataPaths")
max_enemies = 3
Enemy01 = ExtResource("5_1xlqc")
Coin01 = ExtResource("11_evg3r")

[node name="SpawnCheck" type="Timer" parent="Enemies"]
wait_time = 2.0
autostart = true

[node name="LEFT" type="Marker2D" parent="Enemies"]
position = Vector2(-525, -176)

[node name="RIGHT" type="Marker2D" parent="Enemies"]
position = Vector2(1695, -166)

[node name="Items" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("11_05w3k")

[node name="TOP" type="StaticBody2D" parent="."]
position = Vector2(557, -2)
collision_layer = 8
collision_mask = 4
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TOP"]
position = Vector2(15, -25)
shape = SubResource("RectangleShape2D_gd8io")

[node name="BOTTOM" type="StaticBody2D" parent="." groups=["GROUND"]]
position = Vector2(581, 646)
collision_layer = 8
collision_mask = 4
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BOTTOM"]
position = Vector2(-14.5, 16)
shape = SubResource("RectangleShape2D_mkk57")

[node name="WALL" type="StaticBody2D" parent="."]
position = Vector2(-35, 332)
collision_layer = 8
collision_mask = 4
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALL"]
position = Vector2(18.5, -23)
shape = SubResource("RectangleShape2D_45w1i")

[node name="WALL2" type="StaticBody2D" parent="."]
position = Vector2(1157, 338)
collision_layer = 8
collision_mask = 4
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALL2"]
position = Vector2(18.5, -23)
shape = SubResource("RectangleShape2D_45w1i")

[node name="GUI" parent="." instance=ExtResource("3_tbd3a")]
unique_name_in_owner = true

[node name="Code" type="Node" parent="."]

[node name="TimerHP" type="Node" parent="Code"]
script = ExtResource("9_k88hd")
levels = 10
GameOver = "res://Scenes/Menues/GameOver.tscn"
timeleft = 1000.0

[node name="SuperStocks" type="Node" parent="Code"]
unique_name_in_owner = true
script = ExtResource("15_kwbel")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 320)
metadata/_edit_lock_ = true

[connection signal="timeout" from="RosaArea/Timer" to="RosaArea" method="_on_timer_timeout"]
[connection signal="timeout" from="Enemies/SpawnCheck" to="Enemies" method="_on_spawn_check_timeout"]
